TYCHO-478 refactoring to enable p2 resolver tests
Moved p2 resolution code to its own directory structure
under tycho-p2-resolver made it separate Maven/Tycho build.
tycho-p2-resolver is built against helios p2 repository
and currently picks up latest version of p2 and equinox,
which should be locked down before 0.11.0.

Removed now redundant org.sonatype.tycho.p2.publisher,
which was a workaround for https://bugs.eclipse.org/315757
fixed in eclipse 3.6.1.

Changed main build to use Tycho 0.9.0 to build OSGi junit
launchers. Also moved test Eclipse SDK materialization
steps to tycho-its/pom.xml and enabled it unless
-Dtycho.testTargetPlatform is specified.

Signed-off-by: Igor Fedorenko <igor@ifedorenko.com>